compiler/tests/ar/errors/extern_mod_misuse.salam
// لغة: العربية
// توقع: الخارجية
خارجي "C":
    مضمن دالة fabs(قيمة : عشري٦٤) : عشري٦٤
نهاية

دالة الرئيسية:
    اطبع(fabs(0.0 - 1.0))
نهاية
